--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -6,7 +6,8 @@
   author       = {Diego Zamboni},
   title        = {Learning {CFEngine}},
   publisher    = {O'Reilly Media, Inc. 2012--2017, afterwards self-published},
-  year         = 2017,
+  year         = {2017},
+  sortyear     = {2017},
   url          = {http://cf-learn.info/},
   isbn         = {9781449312206},
   keywords     = {book},
@@ -16,7 +17,8 @@
   author       = {Diego Zamboni},
   title        = {Learning {Hammerspoon}},
   publisher    = {Self published},
-  year         = 2018,
+  year         = {2018},
+  sortyear     = {2018},
   month        = oct,
   url          = {https://leanpub.com/learning-hammerspoon},
   keywords     = {book},
@@ -26,7 +28,8 @@
   key          = {Zamboni},
   author       = {Diego Zamboni},
   title        = {Utilerías de Unix (Unix utilities course notes)},
-  year         = 2019,
+  year         = {2019},
+  sortyear     = {2019},
   month        = aug,
   url          = {https://leanpub.com/utileras-unix},
   keywords     = {book}
@@ -36,9 +39,21 @@
   key          = {Zamboni},
   author       = {Diego Zamboni},
   title        = {Literate Config},
-  year         = 2019,
+  year         = {2019},
+  sortyear     = {2019},
   month        = nov,
   url          = {https://leanpub.com/lit-config},
+  keywords     = {book}
+}
+
+@Book{zamboni20:emacs-org-leanpub,
+  key          = {Zamboni},
+  author       = {Diego Zamboni},
+  title        = {Publishing with Emacs, Org-mode and Leanpub},
+  year         = {2020},
+  sortyear     = {2020},
+  month        = jun,
+  url          = {https://leanpub.com/emacs-org-leanpub},
   keywords     = {book}
 }
 
