Added award note to Synkill paper

--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -288,6 +288,7 @@
   organization = {{IEEE} Computer Society},
   publisher    = {{IEEE} Computer Society Press},
   URL          = "https://www.cerias.purdue.edu/apps/reports_and_papers/view/605",
+  note         = "Awarded the 2020 IEEE Security \& Privacy Test of Time Award.",
   keywords     = {refereed},
 }
 
