Reordered bibtex entries

--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -2,12 +2,41 @@
 
 %%%%% Books
 
+@Book{zamboni20:emacs-org-leanpub,
+  key          = {Zamboni},
+  author       = {Diego Zamboni},
+  title        = {Publishing with Emacs, Org-mode and Leanpub},
+  year         = {2020},
+  month        = jun,
+  url          = {https://leanpub.com/emacs-org-leanpub},
+  keywords     = {book}
+}
+
+@Book{zamboni19:lit-config,
+  key          = {Zamboni},
+  author       = {Diego Zamboni},
+  title        = {Literate Configuration},
+  year         = {2019},
+  month        = nov,
+  url          = {https://leanpub.com/lit-config},
+  keywords     = {book}
+}
+
+@Book{zamboni19:utilerias-unix,
+  key          = {Zamboni},
+  author       = {Diego Zamboni},
+  title        = {Utilerías de Unix (Unix utilities course notes)},
+  year         = {2019},
+  month        = aug,
+  url          = {https://leanpub.com/utileras-unix},
+  keywords     = {book}
+}
+
 @Book{zamboni12:learning-cfengine3,
   author       = {Diego Zamboni},
   title        = {Learning {CFEngine}},
   publisher    = {O'Reilly Media, Inc. 2012--2017, afterwards self-published},
   year         = {2017},
-  sortyear     = {2017},
   url          = {http://cf-learn.info/},
   isbn         = {9781449312206},
   keywords     = {book},
@@ -18,43 +47,9 @@
   title        = {Learning {Hammerspoon}},
   publisher    = {Self published},
   year         = {2018},
-  sortyear     = {2018},
   month        = oct,
   url          = {https://leanpub.com/learning-hammerspoon},
   keywords     = {book},
-}
-
-@Book{zamboni19:utilerias-unix,
-  key          = {Zamboni},
-  author       = {Diego Zamboni},
-  title        = {Utilerías de Unix (Unix utilities course notes)},
-  year         = {2019},
-  sortyear     = {2019},
-  month        = aug,
-  url          = {https://leanpub.com/utileras-unix},
-  keywords     = {book}
-}
-
-@Book{zamboni19:lit-config,
-  key          = {Zamboni},
-  author       = {Diego Zamboni},
-  title        = {Literate Config},
-  year         = {2019},
-  sortyear     = {2019},
-  month        = nov,
-  url          = {https://leanpub.com/lit-config},
-  keywords     = {book}
-}
-
-@Book{zamboni20:emacs-org-leanpub,
-  key          = {Zamboni},
-  author       = {Diego Zamboni},
-  title        = {Publishing with Emacs, Org-mode and Leanpub},
-  year         = {2020},
-  sortyear     = {2020},
-  month        = jun,
-  url          = {https://leanpub.com/emacs-org-leanpub},
-  keywords     = {book}
 }
 
 %%%%% Editorial activities
