--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -468,7 +468,7 @@
   pages         = {65--67},
   publisher     = {IEEE Educational Activities Department},
   address       = {Piscataway, NJ, USA},
-  URL           = {http://www.computer.org/portal/web/csdl/doi/10.1109/MSP.2008.24},
+  URL           = {https://ieeexplore.ieee.org/document/4446700},
   keywords     = {invited},
 }
 
