Latest updates and cleanup
- Conciseness and content.
- Many bibliography fixes (broken URLs, etc.).

--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -149,13 +149,11 @@
  author = {Mihai Christodorescu and Reiner Sailer and Douglas Lee Schales and Daniele Sgandurra and Diego Zamboni},
  title = {Cloud Security is Not (Just) Virtualization Security: A Short Paper},
  booktitle = {Proceedings of the 2009 ACM Workshop on Cloud Computing Security},
- series = {CCSW '09},
  year = {2009},
  isbn = {978-1-60558-784-4},
  location = {Chicago, Illinois, USA},
  pages = {97--102},
  numpages = {6},
- url = {http://doi.acm.org/10.1145/1655008.1655022},
  doi = {10.1145/1655008.1655022},
  acmid = {1655022},
  publisher = {ACM},
@@ -226,7 +224,7 @@
   volume       = 10,
   number       = {1,2},
   pages        = {23--70},
-  URL          = {http://iospress.metapress.com/content/rkylmv8hepn2p71d/},
+  URL          = {https://www.researchgate.net/publication/220065478_Using_Internal_Sensors_and_Embedded_Detectors_for_Intrusion_Detection},
   keywords     = {refereed},
 }
 
@@ -309,7 +307,7 @@
   type         = {Research Report},
   number       = {RZ3609},
   month        = nov,
-  url          = {http://tinyurl.com/bgtechreport},
+  url          = {https://dominoweb.draco.res.ibm.com/d7c39a9a2e73d870852570060051dfed.html},
   keywords     = {techreport},
 }
 
@@ -362,7 +360,7 @@
   year         = 2016,
   month        = may,
   URL          = {http://sched.co/6aQ2},
-  URL          = {https://www.youtube.com/watch?v= Wr4E--kr_KE},
+  URL          = {https://www.youtube.com/watch?v=Wr4E--kr_KE},
   keywords     = {presentations},
 }
 
@@ -496,7 +494,7 @@
   journal      = {{IEEE} Spectrum},
   year         = 2005,
   month        = may,
-  URL          = "http://www.spectrum.ieee.org/may05/1124",
+  URL          = {https://spectrum.ieee.org/computing/networks/how-to-hook-worms},
   keywords     = {invited},
 }
 
@@ -506,15 +504,6 @@
   year         = 2004,
   month        = may,
   howpublished = {Keynote talk, presented at the 2004 Computer Security Congress in Mexico City},
-  keywords     = {invited},
-}
-
-@Misc{zamboni99:icsic-aafid,
-  author       = {Diego Zamboni},
-  title        = {{AAFID}: Autonomous Agents for Intrusion Detection},
-  year         = 1999,
-  month        = sep,
-  howpublished = {Invited talk, presented at the 1999 Indiana Client Server and Internet Conference},
   keywords     = {invited},
 }
 
@@ -541,15 +530,6 @@
   month        = nov,
   address      = {Mexico City, Mexico},
   annote       = {Invited presentation},
-  keywords     = {invited},
-}
-
-@Misc{zamboni98:ctia,
-  author       = {Diego Zamboni},
-  title        = {Unix Host Security Tools},
-  year         = 1998,
-  month        = jan,
-  howpublished = {Invited talk, presented at the Cellular Telecommunications Industry Association (CTIA) Network Vulnerability Workshop},
   keywords     = {invited},
 }
 
