--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -360,7 +360,7 @@
   year         = 2016,
   month        = may,
   URL          = {http://sched.co/6aQ2},
-  URL          = {https://www.youtube.com/watch?v=Wr4E--kr_KE},
+  note         = {Presentation: \url{https://www.youtube.com/watch?v=Wr4E--kr_KE}},
   keywords     = {presentations},
 }
 
